GENTBE-1433: Added "readspeaker_enabled" theme setting to prevent Readspeaker from rendering + allow us to add a class to do specific things eg. not overlapping with breadcrumb.

--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -129,4 +129,12 @@
       }
     }
   }
+
+  // If readspeaker is enabled, we add 50px padding so it doesn't overlap
+  // with our breadcrumb navigation. Starting from tablet.
+  @at-root body.readspeaker--enabled & {
+    @include mq($bp-tablet-s) {
+      padding-right: 50px;
+    }
+  }
 }
